@@ -11,6 +11,7 @@ Fixes:
 * fix single RasterLayer capability for superClass
 * spectralIndices now calculates *all* documented indices if specified to do so (@mej1d1, #6)
 * unsuperClass predicted map now handles NAs properly
+* pifMatch did not return adjusted image (@tmb3006, #13)
 
 Deprecated:
 * argument `norm` was dropped from rasterPCA, because it was effectively a duplicate of the standardized pca (spca) argument in the same function.
